--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "expo": "~49.0.7",
+    "expo-clipboard": "~4.3.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.10.1",
     "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
-    "react-native-vector-icons": "^10.0.0",
-    "react-native-pager-view": "6.2.0",
-    "react-native-screens": "~3.22.0",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
